<resources>
    <string name="app_name">BasicViewsDataBinding</string>

    <string name="edittext_name_hint_text">Input your name</string>
    <string name="edittext_email_hint_text">Input your e-mail</string>
    <string name="edittext_day_hint_text">Day</string>
    <string name="edittext_month_hint_text">Month</string>
    <string name="edittext_year_hint_text">Year</string>

    <string name="edittext_username_hint_text">Input username</string>
    <string name="edittext_password_hint_text">Input password</string>
    <string name="edittext_confirm_password_hint_text">Confirm password</string>

    <string name="checkbox_accept_text">Accept Conditions</string>
    <string name="button_register_text">Register</string>
    <string name="button_close_text">Close</string>
    <string name="button_show_password_text">Show Password</string>
    <string name="button_hide_password_text">Hide Password</string>
    <string name="switch_show_button_enable">Allow Show Password</string>

    <string name="button_clear_text">Clear</string>

    <string name="message_number_format_exception">You must input number!</string>
    <string name="message_datetime_exception">Invalid date values</string>

    <string name="message_password_not_confirmed"> Passwords are not the same</string>
    <string name="message_confirm_close">Are you sure to close ?</string>
    <string name="message_continue">You can continue</string>

    <string name="confirm_alert_dialog_title"> Alert </string>
    <string name="confirm_close_alert_dialog_title"> Warning </string>
    <string name="ok_button_text"> OK </string>
    <string name="yes_button_text"> YES </string>
    <string name="no_button_text"> NO </string>
    <string name="toggle_button_on_text"> Close </string>
    <string name="toggle_button_off_text"> Open </string>

    <string name="message_register_allow_close"> If you close all input will be cleared. Are you sure ? </string>
    <string name="message_enable_show_password"> If password is visible it can be dangerous. Are you sure? </string>


    <string-array name="spinner_education_info">
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Msc</item>
        <item>PhD</item>
    </string-array>


</resources>