<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.cso.android.app.viewsdatabinding.viewmodel.RegisterInfo"/>
        <import type="com.cso.android.app.viewsdatabinding.viewmodel.MainActivityViewModel"/>
        <import type="android.widget.ArrayAdapter"/>

        <variable type="com.cso.android.app.viewsdatabinding.viewmodel.RegisterInfo" name="registerInfoViewModel"/>
        <variable type="com.cso.android.app.viewsdatabinding.viewmodel.MainActivityViewModel" name="mainActivityViewModel"/>
        <variable type="String" name="confirmPassword"/>
        <variable type="boolean" name="accept"/>
        <variable type="String" name="result"/>
        <variable type="String" name="day"/>
        <variable type="String" name="month"/>
        <variable type="String" name="year"/>
        <variable type="Object" name="show"/>
        <variable type="int" name="passwordInputType"/>
        <variable type="String" name="showPasswordButtonText"/>
        <variable type="String" name="password"/>
        <variable type="boolean" name="allowShowPasswordChecked"/>
        <variable type="ArrayAdapter&lt;String&gt;" name="educationAdapter"/>
        <variable type="int" name="educationSelectedPos"/>



    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ToggleButton
            android:id="@+id/mainActivityToggleButtonOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_button_on_text"
            android:textOff="@string/toggle_button_off_text"
            android:checked="true"
            android:onCheckedChanged="@{(_,checked) -> mainActivityViewModel.handleOpenToggleButton(checked)}"
         />

        <LinearLayout
            android:id="@+id/mainActivityLayoutRegisterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/mainActivityEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={registerInfoViewModel.name}"
                android:hint="@string/edittext_name_hint_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@={registerInfoViewModel.email}"
                android:hint="@string/edittext_email_hint_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={day}"
                    android:hint="@string/edittext_day_hint_text"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={month}"
                    android:hint="@string/edittext_month_hint_text"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={year}"
                    android:hint="@string/edittext_year_hint_text"/>

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{educationAdapter}"
                android:selectedItemPosition="@={educationSelectedPos}"
             />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@={registerInfoViewModel.userName}"
                android:hint="@string/edittext_username_hint_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="8"
                    android:text="@={password}"
                    android:inputType="@{passwordInputType}"
                    android:hint="@string/edittext_password_hint_text"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> mainActivityViewModel.handleShowPasswordButton()}"
                        android:tag="@{show}"
                        android:enabled="@{allowShowPasswordChecked}"
                        android:text="@={showPasswordButtonText}" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={allowShowPasswordChecked}"
                        android:text="@string/switch_show_button_enable"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:onCheckedChanged="@{(_, checked) -> mainActivityViewModel.handleAllowShowPasswordSwitch(checked)}"/>


                </LinearLayout>


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@={confirmPassword}"
                android:hint="@string/edittext_confirm_password_hint_text"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{accept}"
                android:onClick="@{() -> mainActivityViewModel.handleRegisterButton()}"
                android:text="@string/button_register_text" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={accept}"
                android:text="@string/checkbox_accept_text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{result}"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mainActivityViewModel.handleClearButton()}"

                android:text="@string/button_clear_text"/>

        </LinearLayout>





        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> mainActivityViewModel.handleCloseButton()}"
            android:text="@string/button_close_text" />

    </LinearLayout>


</layout>


